[package]
name = "GJ_StampTuor_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = "1.0.193"
serde_json = "1.0.108"
serde_with = "3.4.0"